--- a/sjx/OrderDishes/app/src/main/res/layout/item_layout.xml
+++ b/sjx/OrderDishes/app/src/main/res/layout/item_layout.xml
@@ -1,25 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="40dp"
+    android:background="@color/gray"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
         android:gravity="center"
         android:text="sss"
-        android:textColor="#00ff00"
-        android:textSize="25sp" />
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/tv1"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:gravity="center"
+        android:layout_toLeftOf="@+id/relayout_add"
         android:text="sss"
-        android:textColor="#00ff00"
-        android:textSize="25sp" />
+        android:layout_marginRight="10dp"
+        android:textSize="15sp" />
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/relayout_add"
+        android:layout_width="100dp"
+        android:orientation="horizontal"
+        android:layout_alignParentRight="true"
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:background="@mipmap/ic_launcher"/>
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:text="25"
+            android:gravity="center"/>
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:background="@mipmap/ic_launcher"/>
+    </LinearLayout>
+</RelativeLayout>
