update for package and Remote Control

--- a/zb_Robot/app/src/main/res/layout/zb_activity_command_config.xml
+++ b/zb_Robot/app/src/main/res/layout/zb_activity_command_config.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#EDEDED"
     android:orientation="vertical"
-    tools:context="com.android.jdrd.robot.activity.SJX_MainActivity">
+    tools:context="com.android.jdrd.robot.activity.ZB_MainActivity">
 
     <RelativeLayout
         android:id="@+id/main"
