--- a/zb_Robot/app/src/main/res/layout/zb_activity_robot_config.xml
+++ b/zb_Robot/app/src/main/res/layout/zb_activity_robot_config.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#EDEDED"
-    tools:context="com.android.jdrd.robot.activity.SJX_MainActivity">
+    >
     <RelativeLayout
         android:id="@+id/main"
         android:background="@mipmap/action_bar"
@@ -125,6 +125,75 @@
                         android:layout_centerVertical="true"
                         android:text="必选"/>
                 </RelativeLayout>
+
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/linear_obstacle"
+                android:layout_width="match_parent"
+                android:layout_height="53dp"
+                android:background="@color/white"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/white"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/open_obstacle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="10dp"
+                        android:gravity="left|center_vertical"
+                        android:text="@string/open_obstacle"
+                        android:textColor="#333333"
+                        android:textSize="15sp" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="@dimen/len_10"
+                        android:orientation="horizontal">
+
+                        <CheckBox
+                            android:id="@+id/robot_top"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="0.4"
+                            android:text="上"
+                            android:textColor="#333333"
+                            android:textSize="15sp" />
+
+                        <CheckBox
+                            android:id="@+id/robot_bottom"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="0.4"
+                            android:text="下"
+                            android:textColor="#333333"
+                            android:textSize="15sp" />
+
+                        <CheckBox
+                            android:id="@+id/robot_side"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="0.4"
+                            android:text="侧"
+                            android:textColor="#333333"
+                            android:textSize="15sp" />
+
+                    </LinearLayout>
+                </RelativeLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    />
             </LinearLayout>
         </LinearLayout>
 </LinearLayout>
