--- a/zb_Robot/app/src/main/res/layout/zb_activity_robot.xml
+++ b/zb_Robot/app/src/main/res/layout/zb_activity_robot.xml
@@ -295,6 +295,7 @@
                 android:layout_height="1dp" />
 
             <LinearLayout
+                android:id="@+id/robot_card"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/area_height"
                 android:background="@color/white"
@@ -324,6 +325,7 @@
                 android:layout_height="1dp" />
 
             <LinearLayout
+                android:id="@+id/robot_turnback"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/area_height"
                 android:background="@color/white"
@@ -353,6 +355,7 @@
                 android:layout_height="1dp" />
 
             <LinearLayout
+                android:id="@+id/robot_outtime"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/area_height"
                 android:background="@color/white"
