--- a/zb_Robot/app/src/main/res/layout/zb_activity_card.xml
+++ b/zb_Robot/app/src/main/res/layout/zb_activity_card.xml
@@ -34,15 +34,21 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
-        <Button
-            android:id="@+id/add_card"
-            android:layout_width="23dp"
+        <RelativeLayout
+            android:id="@+id/add_card_Re"
+            android:layout_width="50dp"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:layout_height="23dp"
-            android:background="@animator/btn_add_card_selector"
-            />
+            android:layout_height="match_parent">
+            <Button
+                android:id="@+id/add_card"
+                android:layout_width="23dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:layout_height="23dp"
+                android:background="@animator/btn_add_card_selector"
+                />
+        </RelativeLayout>
     </RelativeLayout>
 
     <ListView
