--- a/zb_Robot/app/src/main/res/layout/zb_grid_item.xml
+++ b/zb_Robot/app/src/main/res/layout/zb_grid_item.xml
@@ -32,6 +32,7 @@
         android:id="@+id/text"
         android:textSize="11sp"
         android:text="空闲"
+        android:visibility="gone"
         android:gravity="center"
         android:textColor="#FFFFFF"
         android:layout_width="56dp"
@@ -39,14 +40,15 @@
         android:layout_marginTop="58dp"
         android:layout_centerHorizontal="true"
         />
+
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
-        android:textSize="15sp"
-        android:textColor="#333333"
-        android:text="@string/deskname"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_below="@+id/imageview"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:text="@string/deskname"
+        android:textColor="#333333"
+        android:textSize="15sp" />
 </RelativeLayout>
