--- a/zb_Robot/app/src/main/res/layout/zb_grid_item.xml
+++ b/zb_Robot/app/src/main/res/layout/zb_grid_item.xml
@@ -12,7 +12,6 @@
         android:layout_marginTop="9dp"
         android:layout_marginLeft="10dp"
         android:layout_alignParentTop="true"
-        android:background="@mipmap/zaixian"
         android:layout_alignRight="@+id/text"
         android:layout_alignEnd="@+id/text" />
 
@@ -22,7 +21,7 @@
         android:text="空闲"
         android:gravity="center"
         android:textColor="#FFFFFF"
-        android:background="@mipmap/kongxian"
+        android:background="@mipmap/lanse"
         android:layout_width="56dp"
         android:layout_height="18dp"
         android:layout_marginTop="58dp"
