--- a/zb_Robot/app/src/main/res/layout/zb_activity_arearedact.xml
+++ b/zb_Robot/app/src/main/res/layout/zb_activity_arearedact.xml
@@ -355,6 +355,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="33dp"
+        android:visibility="gone"
         android:background="@color/white"
         android:orientation="horizontal"
         >
@@ -379,6 +380,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:background="@color/white"
+        android:visibility="gone"
         android:layout_height="40dp">
         <Button
             android:id="@+id/image"
