--- a/zb_Robot/app/src/main/res/values/styles.xml
+++ b/zb_Robot/app/src/main/res/values/styles.xml
@@ -28,4 +28,12 @@
         <item name="android:backgroundDimEnabled">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
+    <style name="AppBaseTheme" parent="android:Theme.Light">
+        <!--
+            Theme customizations available in newer API levels can go in
+            res/values-vXX/styles.xml, while customizations related to
+            backward-compatibility can go here.
+
+        -->
+    </style>
 </resources>
