--- a/AndroidLauncher/app/src/main/res/layout/activity_main.xml
+++ b/AndroidLauncher/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
             android:id="@+id/gameGird"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:numColumns="3"
             />
     </LinearLayout>
