--- a/AndroidLauncher/app/src/main/res/layout/activity_main.xml
+++ b/AndroidLauncher/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
     <LinearLayout
         android:id="@+id/ll_game"
         android:layout_width="match_parent"
-        android:background="#FFFFFF"
+        android:background="@mipmap/ic_launcher"
         android:visibility="gone"
         android:layout_height="match_parent"
         >
