游戏切换以及图片更新

--- a/AndroidLauncher/app/src/main/res/layout/activity_main.xml
+++ b/AndroidLauncher/app/src/main/res/layout/activity_main.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:background="#000000"
     tools:context=".MainActivity">
     <LinearLayout
         android:id="@+id/ll_video"
         android:layout_width="match_parent"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_height="match_parent">
         <com.android.androidlauncher.view.LauncherVideoView
             android:id="@+id/videoView"
