--- a/AndroidLauncher/app/src/main/res/layout/gridview_item.xml
+++ b/AndroidLauncher/app/src/main/res/layout/gridview_item.xml
@@ -8,12 +8,12 @@
         android:layout_width="180dp"
         android:layout_gravity="center"
         android:orientation="vertical"
-        android:layout_height="180dp">
+        android:layout_height="250dp">
         <ImageView
             android:id="@+id/img"
+            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="120dp"
-            android:layout_marginTop="20dp"
             android:src="@mipmap/ic_launcher" />
         <TextView
             android:id="@+id/text"
@@ -23,7 +23,8 @@
             android:textColor="#000000"
             android:layout_gravity="center"
             android:textSize="25sp"
-            android:text="文字"
+            android:gravity="center"
+            android:text="史上最坑爹的游戏2"
             />
     </LinearLayout>
 
