--- a/zb_Robot/app/src/main/res/layout/zb_activity_arearedact.xml
+++ b/zb_Robot/app/src/main/res/layout/zb_activity_arearedact.xml
@@ -92,7 +92,7 @@
             android:layout_marginLeft="7dp"
             android:layout_gravity="center"
             android:layout_height="18dp"
-            android:background="@mipmap/sjx_left_vertical"/>
+            android:background="@mipmap/zb_left_vertical"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -225,7 +225,7 @@
             android:layout_marginLeft="7dp"
             android:layout_gravity="center"
             android:layout_height="18dp"
-            android:background="@mipmap/sjx_left_vertical"/>
+            android:background="@mipmap/zb_left_vertical"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -364,7 +364,7 @@
             android:layout_marginLeft="7dp"
             android:layout_gravity="center"
             android:layout_height="18dp"
-            android:background="@mipmap/sjx_left_vertical"/>
+            android:background="@mipmap/zb_left_vertical"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -416,7 +416,7 @@
             android:layout_marginLeft="7dp"
             android:layout_gravity="center"
             android:layout_height="18dp"
-            android:background="@mipmap/sjx_left_vertical"/>
+            android:background="@mipmap/zb_left_vertical"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
