--- a/zb_Robot/app/src/main/res/layout/zb_activity_coordinate.xml
+++ b/zb_Robot/app/src/main/res/layout/zb_activity_coordinate.xml
@@ -66,7 +66,7 @@
             android:layout_marginLeft="7dp"
             android:layout_gravity="center"
             android:layout_height="18dp"
-            android:background="@mipmap/sjx_left_vertical"/>
+            android:background="@mipmap/zb_left_vertical"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
