--- a/zb_Robot/app/src/main/res/layout/zb_activity_launch.xml
+++ b/zb_Robot/app/src/main/res/layout/zb_activity_launch.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_launch"
     android:layout_width="match_parent"
@@ -23,6 +23,16 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
     </FrameLayout>
+    <TextView
+        android:id="@+id/application_text"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:text="@string/add"
+        android:textSize="25sp"
+        android:gravity="center"
+        android:textColor="#000"
+        />
 
     <!--<LinearLayout
         android:layout_width="wrap_content"
@@ -56,4 +66,4 @@
             android:text="1.0.0"
             android:textColor="@color/white_alpha_192" />
     </LinearLayout>-->
-</LinearLayout>
+</RelativeLayout>
