--- a/zb_Robot/app/src/main/res/layout/zb_activity_config.xml
+++ b/zb_Robot/app/src/main/res/layout/zb_activity_config.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#EDEDED"
-    tools:context="com.android.jdrd.robot.activity.SJX_MainActivity">
+    tools:context="com.android.zbrobot.activity.ZB_MainActivity">
     <RelativeLayout
         android:id="@+id/main"
         android:background="@mipmap/action_bar"
