--- a/zb_Robot/app/src/main/res/layout/zb_activity_robot.xml
+++ b/zb_Robot/app/src/main/res/layout/zb_activity_robot.xml
@@ -359,6 +359,33 @@
                     />
             </RelativeLayout>
 
+            <RelativeLayout
+                android:id="@+id/robot_outimesetting"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/area_height"
+                android:background="@color/white"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center|left"
+                    android:text="超时时间"
+                    android:textColor="#333333"
+                    android:textSize="@dimen/robot_size" />
+
+                <TextView
+                    android:id="@+id/setting_outime"
+                    android:textStyle="normal|italic"
+                    android:layout_width="150dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_height="match_parent"
+                    android:spinnerMode="dropdown"
+                    />
+            </RelativeLayout>
+
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp" />
