--- a/zb_Robot/app/src/main/res/layout/zb_activity_robot.xml
+++ b/zb_Robot/app/src/main/res/layout/zb_activity_robot.xml
@@ -358,9 +358,39 @@
                     android:spinnerMode="dropdown"
                     />
             </RelativeLayout>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp" />
             <RelativeLayout
-                android:id="@+id/robot_outimesetting"
+                android:id="@+id/runtime"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/area_height"
+                android:background="@color/white"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center|left"
+                    android:text="运行时间"
+                    android:textColor="#333333"
+                    android:textSize="@dimen/robot_size" />
+
+                <TextView
+                    android:id="@+id/runtime_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="20dp"
+                    android:gravity="right|center"
+                    android:textColor="#666666"
+                    android:textSize="@dimen/robot_size" />
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp" />
+            <RelativeLayout
+                android:id="@+id/runouttime"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/area_height"
                 android:background="@color/white"
@@ -376,15 +406,14 @@
                     android:textSize="@dimen/robot_size" />
 
                 <TextView
-                    android:id="@+id/setting_outime"
-                    android:textStyle="normal|italic"
-                    android:layout_width="150dp"
-                    android:layout_alignParentRight="true"
+                    android:id="@+id/runouttime_text"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:spinnerMode="dropdown"
-                    />
+                    android:layout_marginRight="20dp"
+                    android:gravity="right|center"
+                    android:textColor="#666666"
+                    android:textSize="@dimen/robot_size" />
             </RelativeLayout>
-
 
             <View
                 android:layout_width="match_parent"
