--- a/zb_Robot/app/src/main/res/layout/zb_activity_config.xml
+++ b/zb_Robot/app/src/main/res/layout/zb_activity_config.xml
@@ -69,7 +69,7 @@
                 android:textSize="15sp"
                 android:gravity="center"
                 android:textColor="@color/black"
-                android:text="设置桌名"/>
+                android:text="设置名称"/>
         </LinearLayout>
         <LinearLayout
             android:orientation="vertical"
