--- a/Launcher/app/src/main/res/values/dimens.xml
+++ b/Launcher/app/src/main/res/values/dimens.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="layout_width">200dp</dimen>
+    <dimen name="layout_width">500dp</dimen>
     <dimen name="layout_height">50dp</dimen>
     <dimen name="layout_textSize">35sp</dimen>
-    <dimen name="layout_top">35dp</dimen>
+    <dimen name="layout_top">60dp</dimen>
+    <dimen name="layout_bottom">50dp</dimen>
 
-    <dimen name="layout_left">50dp</dimen>
+    <dimen name="relayout_top">20dp</dimen>
 
-    <dimen name="btn_top">15dp</dimen>
+    <dimen name="layout_left">65dp</dimen>
+
+    <dimen name="btn_top">35dp</dimen>
+    <dimen name="btn_left">30dp</dimen>
 
     <dimen name="text_height">40dp</dimen>
     <dimen name="text_size">25sp</dimen>
+
+    <dimen name="relayout_wid">200dp</dimen>
 </resources>
