--- a/Launcher/app/src/main/res/layout/activity_main.xml
+++ b/Launcher/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,221 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@mipmap/back">
+    android:background="@mipmap/background">
+    <LinearLayout
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:orientation="horizontal"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:id="@+id/shipin"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_horizontal"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:orientation="vertical"
+            android:background="@drawable/shape_video"
+            >
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:background="@mipmap/shipin" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_alignParentBottom="true"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:text="@string/video"
+                android:textSize="@dimen/text_size"
+                android:layout_marginBottom="10dp"
+                />
+        </RelativeLayout>
+        <LinearLayout
+            android:layout_gravity="center_vertical"
+            android:gravity="center_horizontal"
+            android:layout_width="300dp"
+            android:layout_marginLeft="@dimen/desire"
+            android:orientation="vertical"
+            android:layout_height="300dp">
+            <RelativeLayout
+                android:id="@+id/news_layout"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_horizontal"
+                android:layout_width="300dp"
+                android:layout_height="145dp"
+                android:orientation="vertical"
+                android:background="@drawable/shape_news"
+                >
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="20dp"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_centerInParent="true"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:background="@mipmap/news"/>
+                </RelativeLayout>
+                <TextView
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_alignParentBottom="true"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="@color/white"
+                    android:text="@string/news"
+                    android:textSize="@dimen/text_size"
+                    />
+            </RelativeLayout>
+            <LinearLayout
+                android:layout_width="300dp"
+                android:layout_marginTop="@dimen/desire"
+                android:orientation="horizontal"
+                android:layout_height="150dp">
+                <RelativeLayout
+                    android:id="@+id/message_layout"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_horizontal"
+                    android:layout_width="145dp"
+                    android:layout_height="145dp"
+                    android:orientation="vertical"
+                    android:background="@drawable/shape_message"
+                    >
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_marginBottom="20dp"
+                        android:layout_height="match_parent">
+                        <ImageView
+                            android:layout_centerInParent="true"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:background="@mipmap/zixun"/>
+                    </RelativeLayout>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_alignParentBottom="true"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:textColor="@color/white"
+                        android:text="@string/message"
+                        android:gravity="center"
+                        android:textSize="@dimen/text_size"
+                        />
+                </RelativeLayout>
+                <RelativeLayout
+                    android:id="@+id/contact"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_horizontal"
+                    android:layout_width="145dp"
+                    android:layout_marginLeft="@dimen/desire"
+                    android:layout_height="145dp"
+                    android:orientation="vertical"
+                    android:background="@drawable/constact"
+                    >
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_marginBottom="20dp"
+                        android:layout_height="match_parent">
+                        <ImageView
+                            android:layout_centerInParent="true"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:background="@mipmap/shejiao"/>
+                    </RelativeLayout>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_alignParentBottom="true"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:textColor="@color/white"
+                        android:text="@string/social_contact"
+                        android:textSize="@dimen/text_size"
+                        android:gravity="center"
+                        />
+                </RelativeLayout>
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_gravity="center_vertical"
+            android:gravity="center_horizontal"
+            android:layout_width="150dp"
+            android:layout_marginLeft="@dimen/desire"
+            android:orientation="vertical"
+            android:layout_height="300dp">
+            <RelativeLayout
+                android:id="@+id/settings"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_horizontal"
+                android:layout_width="145dp"
+                android:layout_height="145dp"
+                android:orientation="vertical"
+                android:background="@drawable/shape_settings"
+                >
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="20dp"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_centerInParent="true"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:background="@mipmap/shezhi"/>
+                </RelativeLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_alignParentBottom="true"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="@color/white"
+                    android:text="@string/settings"
+                    android:textSize="@dimen/text_size"
+                    android:gravity="center"
+                    />
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/play"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_horizontal"
+                android:layout_width="145dp"
+                android:layout_marginTop="@dimen/desire"
+                android:layout_height="145dp"
+                android:orientation="vertical"
+                android:background="@drawable/shape_play"
+                >
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="20dp"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:layout_centerInParent="true"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:background="@mipmap/googleplay"/>
+                </RelativeLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_alignParentBottom="true"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="@color/white"
+                    android:text="@string/google_play"
+                    android:textSize="@dimen/text_size"
+                    android:gravity="center"
+                    />
+            </RelativeLayout>
+        </LinearLayout>
+    </LinearLayout>
+
+
     <RelativeLayout
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="60dp">
         <Button
             android:layout_width="45dp"
@@ -19,6 +228,7 @@
     </RelativeLayout>
     <HorizontalScrollView
         android:id="@+id/horizontal"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:layout_height="match_parent">
