--- a/Launcher/app/src/main/res/layout/gridview_item.xml
+++ b/Launcher/app/src/main/res/layout/gridview_item.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="250dp"
+    android:layout_height="250dp"
     android:layout_gravity="center"
     android:orientation="vertical" >
-    <LinearLayout
-        android:layout_width="150dp"
+    <RelativeLayout
+        android:layout_width="250dp"
         android:layout_gravity="center"
-        android:orientation="vertical"
-        android:layout_height="180dp">
+        android:layout_height="250dp">
         <ImageView
             android:id="@+id/img"
-            android:layout_width="100dp"
+            android:layout_width="130dp"
+            android:layout_centerInParent="true"
             android:layout_gravity="center"
-            android:layout_height="100dp"
+            android:layout_height="130dp"
             />
         <TextView
             android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:layout_gravity="center"
             android:textSize="25sp"
+            android:layout_alignParentBottom="true"
             android:gravity="center"
-            android:text="史上最坑爹的游戏2"
             />
-    </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
