--- a/Launcher/app/src/main/res/values/dimens.xml
+++ b/Launcher/app/src/main/res/values/dimens.xml
@@ -16,5 +16,7 @@
     <dimen name="text_height">40dp</dimen>
     <dimen name="text_size">25sp</dimen>
 
-    <dimen name="relayout_wid">200dp</dimen>
+    <dimen name="relayout_wid">100dp</dimen>
+
+    <dimen name="desire">10dp</dimen>
 </resources>
