--- a/Launcher/app/src/main/res/drawable/shape_dialog.xml
+++ b/Launcher/app/src/main/res/drawable/shape_dialog.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FF8DB6CD" />
+    <solid android:color="#EEE0E0E0" />
     <corners android:topLeftRadius="60dp"
         android:topRightRadius="60dp"
         android:bottomRightRadius="60dp"
         android:bottomLeftRadius="60dp"/>
-    <stroke android:width="2dp" android:color="#96CDCD" />
+    <stroke android:width="2dp" android:color="#EDEDED" />
 </shape>
