--- a/Launcher/app/src/main/res/layout/activity_dialog.xml
+++ b/Launcher/app/src/main/res/layout/activity_dialog.xml
@@ -3,35 +3,41 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:alpha="0.8"
-    android:gravity="center"
-    android:orientation="vertical"
+    android:alpha="0.9"
     >
-    <RelativeLayout
-        android:layout_width="600dp"
-        android:layout_height="@dimen/layout_height">
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/all"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:textColor="@color/white"
-            android:textSize="@dimen/layout_textSize" />
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="600dp"
-        android:layout_marginTop="20dp"
-        android:layout_height="520dp">
-        <GridView
-            android:id="@+id/news_girdview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:background="@drawable/shape_dialog"
-            android:numColumns="2"
-            />
-    </RelativeLayout>
+    <LinearLayout
+        android:id="@+id/background"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:layout_width="600dp"
+            android:layout_height="@dimen/layout_height">
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/all"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/layout_textSize" />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="600dp"
+            android:layout_marginTop="10dp"
+            android:layout_height="520dp">
+            <GridView
+                android:id="@+id/news_girdview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:background="@drawable/shape_dialog"
+                android:numColumns="2"
+                />
+        </RelativeLayout>
+    </LinearLayout>
 </LinearLayout>
