--- a/Launcher/app/src/main/res/values/styles.xml
+++ b/Launcher/app/src/main/res/values/styles.xml
@@ -30,4 +30,9 @@
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
+
+    <style name="dialogWindowAnim" parent="android:Animation" mce_bogus="1">
+        <item name="android:windowEnterAnimation">@anim/dialog_exit_anim</item>
+        <item name="android:windowExitAnimation">@anim/dialog_enter_anim</item>
+    </style>
 </resources>
