--- a/Launcher/app/src/main/res/drawable/shape_message.xml
+++ b/Launcher/app/src/main/res/drawable/shape_message.xml
@@ -10,9 +10,15 @@
     android:centerY="0.5"       渐变中心相对Y坐标只有渐变类型为放射渐变时有效
     android:gradientRadius="100"    渐变半径 非线性放射有效
      -->
+
+    <!--<gradient-->
+        <!--android:startColor="#D02090"-->
+        <!--android:endColor="#DA70D6"-->
+        <!--android:angle="270"-->
+        <!--/>-->
     <gradient
-        android:startColor="#D02090"
-        android:endColor="#DA70D6"
+        android:startColor="#7B51B3"
+        android:endColor="#7B51B3"
         android:angle="270"
         />
     <corners android:topLeftRadius="20dp"
