--- a/Launcher/app/src/main/res/drawable/shape_news.xml
+++ b/Launcher/app/src/main/res/drawable/shape_news.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
+<shape xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:ignore="MissingDefaultResource">
     <!--
     android:startColor="#aa000000"  渐变起始色值
     android:centerColor=""      渐变中间色值
@@ -9,10 +11,16 @@
     android:centerX="0.5"       渐变中心相对X坐标只有渐变类型为放射渐变时有效
     android:centerY="0.5"       渐变中心相对Y坐标只有渐变类型为放射渐变时有效
     android:gradientRadius="100"    渐变半径 非线性放射有效
+     9AFF9A
      -->
+    <!--<gradient-->
+        <!--android:startColor="#458B00"-->
+        <!--android:endColor="#458B00"-->
+        <!--android:angle="90"-->
+        <!--/>-->
     <gradient
-        android:startColor="#9AFF9A"
-        android:endColor="#458B00"
+        android:startColor="#7AAC49"
+        android:endColor="#7AAC49"
         android:angle="90"
         />
     <corners android:topLeftRadius="20dp"
