--- a/Launcher/app/src/main/res/drawable/shape_play.xml
+++ b/Launcher/app/src/main/res/drawable/shape_play.xml
@@ -8,11 +8,16 @@
     android:type="radial"       渐变类型 有三种 线性linear 放射渐变radial 扫描线性渐变sweep
     android:centerX="0.5"       渐变中心相对X坐标只有渐变类型为放射渐变时有效
     android:centerY="0.5"       渐变中心相对Y坐标只有渐变类型为放射渐变时有效
-    android:gradientRadius="100"    渐变半径 非线性放射有效
+    android:gradientRadius="100"    渐变半径 非线性放射有效 FFA54F
      -->
+    <!--<gradient-->
+        <!--android:startColor="#FFA500"-->
+        <!--android:endColor="#FFA500"-->
+        <!--android:angle="270"-->
+        <!--/>-->
     <gradient
-        android:startColor="#FFA54F"
-        android:endColor="#FFA500"
+        android:startColor="#E99B2F"
+        android:endColor="#E99B2F"
         android:angle="270"
         />
     <corners android:topLeftRadius="20dp"
