--- a/Launcher/app/src/main/res/drawable/shape_video.xml
+++ b/Launcher/app/src/main/res/drawable/shape_video.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
+<shape xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:ignore="MissingDefaultResource">
     <!--
     android:startColor="#aa000000"  渐变起始色值
     android:centerColor=""      渐变中间色值
@@ -9,14 +11,17 @@
     android:centerX="0.5"       渐变中心相对X坐标只有渐变类型为放射渐变时有效
     android:centerY="0.5"       渐变中心相对Y坐标只有渐变类型为放射渐变时有效
     android:gradientRadius="100"    渐变半径 非线性放射有效
+    FF6A6A
+    EED2EE
      -->
-    <gradient
-        android:startColor="#EED2EE"
-        android:endColor="#FF6A6A"
-        android:angle="270"
-        />
     <corners android:topLeftRadius="20dp"
         android:topRightRadius="20dp"
         android:bottomRightRadius="20dp"
         android:bottomLeftRadius="20dp"/>
+
+    <gradient
+        android:startColor="#EA4D44"
+        android:endColor="#EA4D44"
+        android:angle="270"
+        />
 </shape>
