--- a/Launcher/app/src/main/res/layout/activity_main.xml
+++ b/Launcher/app/src/main/res/layout/activity_main.xml
@@ -3,11 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@mipmap/background">
+    android:background="@mipmap/beijing"
+    >
     <LinearLayout
         android:id="@+id/layout_cn"
         android:layout_gravity="center"
-        android:visibility="gone"
         android:layout_width="wrap_content"
         android:orientation="horizontal"
         android:layout_height="match_parent">
@@ -218,9 +218,12 @@
         android:id="@+id/girdview_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="@mipmap/beijing2"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_marginTop="20dp"
             android:layout_height="match_parent">
             <GridView
                 android:id="@+id/all_content"
@@ -229,7 +232,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:numColumns="6"
-                android:verticalSpacing="15dp" />
+                />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout >
