--- a/Launcher/app/src/main/res/layout/activity_webview.xml
+++ b/Launcher/app/src/main/res/layout/activity_webview.xml
@@ -5,21 +5,27 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".activity.MainActivity">
-    <VideoView
-        android:id="@+id/videoView"
-        android:visibility="gone"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <com.android.srd.launcher.View.ProgressView
-        android:id="@+id/progressbar"
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:max="100"
-        android:progress="0"
-        />
-    <WebView
-        android:id="@+id/webview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:background="@mipmap/beijing4"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+        <VideoView
+            android:id="@+id/videoView"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <com.android.srd.launcher.View.ProgressView
+            android:id="@+id/progressbar"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:max="100"
+            android:progress="0"
+            />
+        <WebView
+            android:id="@+id/webview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
 
 </LinearLayout>
