update for PC webview

--- a/MyLauncherWeb/app/src/main/res/layout/tab_drawer.xml
+++ b/MyLauncherWeb/app/src/main/res/layout/tab_drawer.xml
@@ -71,6 +71,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/dividerColor"
         android:baselineAligned="false"
+        android:visibility="gone"
         android:orientation="horizontal"
         android:weightSum="3" >
 
