--- a/MyLauncherWeb/app/src/main/res/layout/bookmark_drawer.xml
+++ b/MyLauncherWeb/app/src/main/res/layout/bookmark_drawer.xml
@@ -71,6 +71,7 @@
         android:background="?attr/dividerColor"
         android:baselineAligned="false"
         android:orientation="horizontal"
+        android:visibility="gone"
         android:weightSum="3" >
 
         <RelativeLayout
