add for mov video

--- a/MyLauncherWeb/app/src/main/res/layout/activity_first.xml
+++ b/MyLauncherWeb/app/src/main/res/layout/activity_first.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="match_parent">
-        <com.youkes.browser.view.LauncherVideoView
+        <com.youkes.browser.widget.media.IjkVideoView
             android:id="@+id/videoView"
             android:layout_gravity="center"
             android:layout_width="match_parent"
