--- a/MyLauncherWeb/app/src/main/res/values/attr.xml
+++ b/MyLauncherWeb/app/src/main/res/values/attr.xml
@@ -26,4 +26,10 @@
         <attr name="bidirectionalAnimate" format="boolean" />
     </declare-styleable>
 
+    <attr name="entrySummaries" format="reference" />
+
+    <declare-styleable name="IjkListPreference">
+        <attr name="entrySummaries" />
+    </declare-styleable>
+
 </resources>
