--- a/cultraview/VirtualKeyTV-EDU/whiteboardlib/src/main/res/values/arrays.xml
+++ b/cultraview/VirtualKeyTV-EDU/whiteboardlib/src/main/res/values/arrays.xml
@@ -337,4 +337,12 @@
         <item>Middle</item>
         <item>Strong</item>
     </string-array>
+
+
+    <string-array name="str_arr_sound_spdifoutput_vals">
+        <item>PCM</item>
+        <item>RAW</item>
+        <item>Off</item>
+    </string-array>
+
 </resources>
