--- a/cultraview/VirtualKeyTV-EDU/floatwindowlib/src/main/res/layout/fragment_option.xml
+++ b/cultraview/VirtualKeyTV-EDU/floatwindowlib/src/main/res/layout/fragment_option.xml
@@ -58,6 +58,17 @@
             android:text="@string/str_pic_vga"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_13" />
+
+        <TextView
+            android:id="@+id/text_szyp"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:gravity="center"
+            android:text="数字音频输出"
+            android:textColor="@color/white"
+            android:textSize="@dimen/sp_13" />
     </LinearLayout>
 
     <FrameLayout
