update for Source

--- a/cultraview/SourceMenu/app/src/main/res/drawable/textseletct.xml
+++ b/cultraview/SourceMenu/app/src/main/res/drawable/textseletct.xml
@@ -12,4 +12,8 @@
         android:state_focused="true"
         android:state_pressed="true"
         android:color="#0c96f1"/>
+    <item
+        android:state_focused="false"
+        android:state_pressed="false"
+        android:color="#bdbbbb"/>
 </selector>
