--- a/cultraview/SourceMenu/app/src/main/res/layout/source_item_ah.xml
+++ b/cultraview/SourceMenu/app/src/main/res/layout/source_item_ah.xml
@@ -3,7 +3,9 @@
     android:orientation="vertical"
     android:layout_width="@dimen/dp_350"
     android:layout_height="@dimen/dp_350"
+    android:id="@+id/ahitem"
     android:padding="0dp"
+    android:descendantFocusability="blocksDescendants"
     android:layout_margin="0dp"
     android:layout_gravity="center">
 
@@ -31,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@drawable/textseletct"
+
         android:textSize="10dp"
         android:id="@+id/mText"/>
 </RelativeLayout>
