--- a/cultraview/SourceMenu/app/src/main/res/values/dimens.xml
+++ b/cultraview/SourceMenu/app/src/main/res/values/dimens.xml
@@ -4,12 +4,13 @@
     <dimen name="dp_30">15px</dimen>
     <dimen name="dp_35">17.5px</dimen>
     <dimen name="dp_50">25px</dimen>
-
+    <dimen name="dp_140">70px</dimen>
     <dimen name="dp_160">80px</dimen>
     <dimen name="dp_170">85px</dimen>
 
     <dimen name="dp_200">100px</dimen>
     <dimen name="dp_210">110px</dimen>
+    <dimen name="dp_280">140px</dimen>
     <dimen name="dp_350">175px</dimen>
 
     <dimen name="dp_700">350px</dimen>
